# ToJSON

./: .gitignore  CMakeLists.txt  README.md  ToJSON.cpp  ToJSON.h
.devcontainer/: Dockerfile
test/: CMakeLists.txt  ToJSONTests.cpp
